# cloudfn

./: .gitignore  Cargo.toml  README.md
examples/: classify.rs  colorize.rs  summarize.rs
src/: error.rs  lib.rs
src/image/: classifier.rs  colorizer.rs  mod.rs
src/nlp/: mod.rs  summarizer.rs
